<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".TambahKeluargaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteSmoke">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:titleTextColor="@color/colorPrimaryDark"
            app:popupTheme="@style/noTopBar.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lengkapi Data Keluarga"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_nik"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_no_induk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/exa_nik"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama_lengkap"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/exa_fullname"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tempat_lahir"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_tmplahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/exa_tempatlahir"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tgl_lahir"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_tgllahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/exa_tgl_lahir"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:inputType="none"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/jenis_kelamin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/jk_laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laki-Laki" />
                <RadioButton
                    android:id="@+id/jk_wanita"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perempuan" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/stat_pernikahan"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_marige"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_boxes">

                <Spinner
                    android:id="@+id/spinner_marige"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_alamat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/exa_alamat"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:maxLines="3"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textSize="18sp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kecamatan"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_kecamatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_boxes">

                <Spinner
                    android:id="@+id/spinner_kecamatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desa_kel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_desa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_boxes">

                <Spinner
                    android:id="@+id/spinner_desa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rt_rw"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/txt_rt"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/exa_rt"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="/"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_rw"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/exa_r2"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_save_profile"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_yellow"
                    android:clickable="true"
                    android:text="@string/save_profile"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>