<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteSmoke">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:titleTextColor="@color/colorPrimaryDark"
            app:popupTheme="@style/noTopBar.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/text_signup"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/provinsi"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/txt_layout_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_boxes"
                android:layout_marginTop="5dp">

                <Spinner
                    android:id="@+id/spinner_province"
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kabkota"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_boxes">

                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_candidate"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/noavatar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/username"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nohp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:hint="@string/exa_nohp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rujukan"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_rujukan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/rujukan"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_regis"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_yellow"
                    android:clickable="true"
                    android:text="@string/register"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>