<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="286dp"
                android:layout_height="117dp"
                android:layout_gravity="center"
                android:src="@drawable/logosuaraku" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/exa_username"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txt_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_yellow"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="-1dp"
                    android:text="@string/login"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/daftar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>