<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".VerifikasiActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteSmoke">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/noTopBar.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h1_verifikasi"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_otp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_otp_title"
                android:textColor="@color/colorPrimaryDark"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/txt_verif_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_toStartOf="@+id/btn_kirim"
                    android:background="@drawable/bg_boxes"
                    android:hint="@string/verifikasi"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/btn_kirim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/resend_verifikasi"
                    android:textColor="@color/goldenRod"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_marginTop="13dp"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_verifikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/h1_verifikasi"
                android:background="@drawable/button_background_yellow"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>